# looptap-recorder

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  app.py  build_exe.bat  pyproject.toml  requirements.txt  run.bat  stop_server.bat
docs/: app.js  index.html  styles.css
static/: app.js  styles.css
templates/: index.html
